--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "aiogram>=3.21.0",
+    "python-dotenv>=1.1.1",
+    "ruff>=0.12.2",
 ]
