Add statistics command and utility functions for expense tracking
- Implemented /stats command to retrieve user expense statistics for specified periods (week, month, year).
- Added utility functions for currency conversion and fetching exchange rates using the exchangerate.host API.
- Introduced aggregation of expenses by category and formatting of statistics messages for Telegram output.
- Updated dependencies in the project to include requests and charset-normalizer for handling HTTP requests and character encoding.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.10"
 dependencies = [
     "aiogram>=3.21.0",
     "python-dotenv>=1.1.1",
+    "requests>=2.32.4",
     "uvloop>=0.21.0",
 ]
