feat: migrate from SQLite to PostgreSQL
- Added .env.example file for environment variable configuration.
- Updated .gitignore to exclude PostgreSQL database files.
- Modified README.md to reflect changes in database usage and environment setup.
- Updated docker-compose.yml to include PostgreSQL service.
- Changed database connection logic in db.py to use psycopg for PostgreSQL.
- Removed SQLite-specific code and constants.
- Added psycopg dependency to pyproject.toml and updated lock file.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "aiogram>=3.21.0",
+    "psycopg[binary]>=3.2.9",
     "python-dotenv>=1.1.1",
     "requests>=2.32.4",
     "uvloop>=0.21.0",
