--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,26 @@
 services:
+  db:
+    image: postgres:17
+    container_name: spending-postgres
+    restart: unless-stopped
+    env_file:
+      - .env
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
   spending-bot:
     build: .
     container_name: spending-bot
     env_file:
       - .env
     restart: unless-stopped
+    depends_on:
+      - db
+
+volumes:
+  pgdata:
